--- a/Changes
+++ b/Changes
@@ -1,3 +1,20 @@
+0.002   2018-04-12 (PERLANCAR)
+
+        - [Incompatible change] Change structure of get_order_book() result to
+          make it more similar to native result returned by most exchanges
+          ({sell=>[...], buy=>[...]}). Make result 2D-table (more viewable from
+          CLI) only at the cryp-exchange level.
+
+        - Support cryptopia.
+
+        - bitcoin_indonesia: Replace Finance::BTCIndo & App::btcindo with Finance::Indodax &
+          App::indodax.
+
+        - [Bugfix] Forgot to load module in completion routine.
+
+        - [doc] Add some description.
+
+
 0.001   2018-04-04 (PERLANCAR)
 
         - First release.
