--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.003   2018-05-10 (PERLANCAR)
+
+	- Rename bitcoin_indonesia to indodax.
+
+
 0.002   2018-04-12 (PERLANCAR)
 
         - [Incompatible change] Change structure of get_order_book() result to
