--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.005   2018-06-08 (PERLANCAR)
+
+	- gdax: get_order_book: remove num-orders from GDAX API result.
+
+
 0.004   2018-06-06 (PERLANCAR)
 
 	[REMOVED]
