--- a/Changes
+++ b/Changes
@@ -1,3 +1,8 @@
+0.008   2018-06-13 (PERLANCAR)
+
+        - Add subcommands: ticker, open-orders.
+
+
 0.007   2018-06-11 (PERLANCAR)
 
 	- [ux] Add coerce rule str_num_en so we can say --price 7,000 etc
