--- a/Changes
+++ b/Changes
@@ -1,3 +1,9 @@
+0.012   2021-05-26  Released-By: PERLANCAR; Urgency: high
+
+	- [build] Rebuild to update Sah coercion module names (old Sah coercion
+          modules have been purged from CPAN).
+
+
 0.011   2018-11-29  Released-By: PERLANCAR
 
 	- Rename App::cryp::Exchange::{gdax,coinbasepro_lite}.
